--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tabler/core": "^1.0.0-beta20",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.7",
     "vue": "^3.4.21",
