--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tabler/core": "^1.0.0-beta20",
+    "animate.css": "^4.1.1",
     "pinia": "^2.1.7",
     "sweetalert2": "^11.10.7",
     "vue": "^3.4.21",
